# pages

./: Pipfile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml
docs/: index.md
docs/python/: 01_advice.md  01_editing.md  02_functions.md  03_editing.md  03_tips.md  03_tricks.md  04_comprehensions.md  04_editing.md  05_avoid.md  05_comprehensions.md  06_avoid.md  avoid.md  functions.md  index.md  tips.md
