[tool.poetry]
name = "pages"
version = "0.1.0"
description = "Cameron's Pages"
authors = ["Cameron Kleiman <camtheman256@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.6.13"
Pillow = "^11.2.1"
CairoSVG = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
