[tool.poetry]
name = "pages"
version = "0.1.0"
description = "Cameron's Pages"
authors = ["Cameron Kleiman <camtheman256@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.6.22"
Pillow = "^12.0.0"
CairoSVG = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
